# babelbit_subnet

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  min_compute.yml  pyproject.toml
babelbit/benchmarks/: __init__.py  api_challenge.py  challenge_flow.py  edge_fixture_tts.py  local_fixture_synth.py  miner_test_data.py  s2s_client.py
babelbit/cli/: runner.py  signer_api.py  subtensor_gateway.py  validate.py
babelbit/dev_scripts/: README.md  score_dialogue-explanation.md
babelbit/schemas/: __init__.py  audio_prediction.py
babelbit/scoring/: __init__.py  reference_metadata.py  score_dialogue_README.md  scoring_common.py  stt.py  text_embeddings.py  utterance_scoring.py
babelbit/utils/: audio_artifacts.py  bittensor_helpers.py  file_handling.py  (+11 more)
scripts/: build_locale_test_data.py  migrate_api_challenge_cache.py  rebuild_fixtures_hand_edge_tts.py  rebuild_fixtures_hand_tts.py  render_locale_source_audio.py  synth_api_challenge_local.py
tests/: conftest.py  test_api_challenge.py  test_authentication_failures.py  test_benchmark_miner_sample_paths.py  test_benchmark_validator_random.py  test_challenge_flow.py  test_duplication_penalty.py  test_edge_fixture_tts.py  test_get_weights.py  test_hf_runtime.py  test_local_fixture_synth.py  test_managed_container_registry.py  test_miner_test_data.py  test_predict_engine_gateway.py  test_processed_miners.py  test_runner_loop_synchronization.py  test_runner_s2s_audio.py  test_s2s_client.py  test_settings_defaults.py  test_signer_memory.py  test_subtensor_gateway_client.py  test_validation_submission.py
(+8 files in other folders)
